versioned_docs/version-5.0/client-api/operations/maintenance/indexes/get-index-errors.mdx
---
title: "Operations: How to Get Index Errors"
hide_table_of_contents: true
sidebar_label: Get Index Errors
sidebar_position: 14
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java"];


# Operations: How to Get Index Errors
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">


**GetIndexErrorsOperation** is used to return errors encountered during document indexing. 

## Syntax

<TabItem value="errors_1" label="errors_1">
<CodeBlock language="csharp">
{`public GetIndexErrorsOperation()

public GetIndexErrorsOperation(string[] indexNames)
`}
</CodeBlock>
</TabItem>

<TabItem value="errors_2" label="errors_2">
<CodeBlock language="csharp">
{`public class IndexErrors
\{
    public string Name \{ get; set; \}
    public IndexingError[] Errors \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="errors_3" label="errors_3">
<CodeBlock language="csharp">
{`public class IndexingError
\{
    public string Error \{ get; set; \}
    public DateTime Timestamp \{ get; set; \}
    public string Document \{ get; set; \}
    public string Action \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

| Return Value | | |
| ------------- | ----- | ---- |
| **Name** | string | Index name |
| **Errors** | IndexingError\[\] | List of indexing errors |

## Example I

<TabItem value="errors_4" label="errors_4">
<CodeBlock language="csharp">
{`// gets errors for all indexes
IndexErrors[] indexErrors = store.Maintenance.Send(new GetIndexErrorsOperation());
`}
</CodeBlock>
</TabItem>

## Example II

<TabItem value="errors_5" label="errors_5">
<CodeBlock language="csharp">
{`// gets errors only for 'Orders/Totals' index
IndexErrors[] indexErrors = store.Maintenance.Send(new GetIndexErrorsOperation(new[] \{ "Orders/Totals" \}));
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="java">


**GetIndexErrorsOperation** is used to return errors encountered during document indexing. 

## Syntax

<TabItem value="errors_1" label="errors_1">
<CodeBlock language="java">
{`public GetIndexErrorsOperation()

public GetIndexErrorsOperation(String[] indexNames)
`}
</CodeBlock>
</TabItem>

<TabItem value="errors_2" label="errors_2">
<CodeBlock language="java">
{`public class IndexErrors \{
    private String name;
    private IndexingError[] errors;

    public IndexErrors() \{
        errors = new IndexingError[0];
    \}

    public String getName() \{
        return name;
    \}

    public void setName(String name) \{
        this.name = name;
    \}

    public IndexingError[] getErrors() \{
        return errors;
    \}

    public void setErrors(IndexingError[] errors) \{
        this.errors = errors;
    \}
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="errors_3" label="errors_3">
<CodeBlock language="java">
{`public class IndexingError \{

    private String error;
    private Date timestamp;
    private String document;
    private String action;

    public String getError() \{
        return error;
    \}

    public void setError(String error) \{
        this.error = error;
    \}

    public Date getTimestamp() \{
        return timestamp;
    \}

    public void setTimestamp(Date timestamp) \{
        this.timestamp = timestamp;
    \}

    public String getDocument() \{
        return document;
    \}

    public void setDocument(String document) \{
        this.document = document;
    \}

    public String getAction() \{
        return action;
    \}

    public void setAction(String action) \{
        this.action = action;
    \}
\}
`}
</CodeBlock>
</TabItem>

| Return Value | | |
| ------------- | ----- | ---- |
| **Name** | String | Index name |
| **Errors** | IndexingError\[\] | List of indexing errors |

## Example I

<TabItem value="errors_4" label="errors_4">
<CodeBlock language="java">
{`// gets errors for all indexes
IndexErrors[] indexErrors
    = store.maintenance().send(new GetIndexErrorsOperation());
`}
</CodeBlock>
</TabItem>

## Example II

<TabItem value="errors_5" label="errors_5">
<CodeBlock language="java">
{`// gets errors only for 'Orders/Totals' index
IndexErrors[] indexErrors
    = store.maintenance()
        .send(new GetIndexErrorsOperation(new String[]\{"Orders/Totals"\}));
`}
</CodeBlock>
</TabItem>


</LanguageContent>

<!---
### Indexes
- [What are Indexes](../../../../indexes/what-are-indexes)
- [Creating and Deploying Indexes](../../../../indexes/creating-and-deploying)
- [Debugging Index Errors](../../../../indexes/troubleshooting/debugging-index-errors)

### Server
- [Index Administration](../../../../server/administration/index-administration)

### Operations
- [How to Reset Index](../../../../client-api/operations/maintenance/indexes/reset-index)


-->