versioned_docs/version-5.3/client-api/operations/maintenance/indexes/get-index-errors.mdx
---
title: "Get Index Errors Operation"
hide_table_of_contents: true
sidebar_label: Get Index Errors
sidebar_position: 14
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "nodejs"];


# Get Index Errors Operation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* Use `GetIndexErrorsOperation` to get errors encountered during indexing.

* The index errors will be retrieved only from the server node defined by the current [client-configuration](../../../../client-api/configuration/load-balance/overview.mdx#client-logic-for-choosing-a-node).

* To clear index errors see [delete index errors](../../../../client-api/operations/maintenance/indexes/delete-index-errors.mdx). 

* In this page:
    * [Get errors for all indexes](../../../../client-api/operations/maintenance/indexes/get-index-errors.mdx#get-errors-for-all-indexes)
    * [Get errors for specific indexes](../../../../client-api/operations/maintenance/indexes/get-index-errors.mdx#get-errors-for-specific-indexes)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/get-index-errors.mdx#syntax)

</Admonition>
## Get errors for all indexes

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Define the get index errors operation
var getIndexErrorsOp = new GetIndexErrorsOperation();

// Execute the operation by passing it to Maintenance.Send
IndexErrors[] indexErrors = store.Maintenance.Send(getIndexErrorsOp);

// indexErrors will contain errors for ALL indexes
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Define the get index errors operation
var getIndexErrorsOp = new GetIndexErrorsOperation();

// Execute the operation by passing it to Maintenance.SendAsync
IndexErrors[] indexErrors = await store.Maintenance.SendAsync(getIndexErrorsOp);

// indexErrors will contain errors for ALL indexes
`}
</CodeBlock>
</TabItem>
</Tabs>



## Get errors for specific indexes

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Define the get index errors operation for specific indexes
var getIndexErrorsOp = new GetIndexErrorsOperation(new[] { "Orders/Totals" });

// Execute the operation by passing it to Maintenance.Send
// An exception will be thrown if any of the specified indexes do not exist
IndexErrors[] indexErrors = store.Maintenance.Send(getIndexErrorsOp);

// indexErrors will contain errors only for index "Orders/Totals"
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Define the get index errors operation for specific indexes
var getIndexErrorsOp = new GetIndexErrorsOperation(new[] { "Orders/Totals" });

// Execute the operation by passing it to Maintenance.SendAsync
// An exception will be thrown if any of the specified indexes do not exist
IndexErrors[] indexErrors = await store.Maintenance.SendAsync(getIndexErrorsOp);

// indexErrors will contain errors only for index "Orders/Totals"
`}
</CodeBlock>
</TabItem>
</Tabs>



## Syntax

<TabItem value="syntax_1" label="syntax_1">
<CodeBlock language="csharp">
{`// Available overloads:
public GetIndexErrorsOperation()                    // Get errors for all indexes
public GetIndexErrorsOperation(string[] indexNames) // Get errors for specific indexes
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - | - | - |
| __indexNames__ | string[] | List of index names for which to get errors |

| Return value of `store.Maintenance.Send(getIndexErrorsOp)`| |
| - | - |
| __IndexErrors[]__ |  List of `IndexErrors` class.<br/>An exception is thrown if any of the specified indexes do not exist. |

<TabItem value="syntax_2" label="syntax_2">
<CodeBlock language="csharp">
{`public class IndexErrors
\{
    public string Name \{ get; set; \}            // Index name
    public IndexingError[] Errors \{ get; set; \} // List of errors for this index
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="syntax_3" label="syntax_3">
<CodeBlock language="csharp">
{`public class IndexingError
\{
    // The error message
    public string Error \{ get; set; \}
    
    // Time of error
    public DateTime Timestamp \{ get; set; \}
    
    // If Action is 'Map'    - field will contain the document ID
    // If Action is 'Reduce' - field will contain the Reduce key value
    // For all other Actions - field will be null 
    public string Document \{ get; set; \}
    
    // Area where error has occurred, e.g. Map/Reduce/Analyzer/Memory/etc.
    public string Action \{ get; set; \}      
\}
`}
</CodeBlock>
</TabItem>




</LanguageContent>
<LanguageContent language="java">


**GetIndexErrorsOperation** is used to return errors encountered during document indexing. 

## Syntax

<TabItem value="errors_1" label="errors_1">
<CodeBlock language="java">
{`public GetIndexErrorsOperation()

public GetIndexErrorsOperation(String[] indexNames)
`}
</CodeBlock>
</TabItem>

<TabItem value="errors_2" label="errors_2">
<CodeBlock language="java">
{`public class IndexErrors \{
    private String name;
    private IndexingError[] errors;

    public IndexErrors() \{
        errors = new IndexingError[0];
    \}

    public String getName() \{
        return name;
    \}

    public void setName(String name) \{
        this.name = name;
    \}

    public IndexingError[] getErrors() \{
        return errors;
    \}

    public void setErrors(IndexingError[] errors) \{
        this.errors = errors;
    \}
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="errors_3" label="errors_3">
<CodeBlock language="java">
{`public class IndexingError \{

    private String error;
    private Date timestamp;
    private String document;
    private String action;

    public String getError() \{
        return error;
    \}

    public void setError(String error) \{
        this.error = error;
    \}

    public Date getTimestamp() \{
        return timestamp;
    \}

    public void setTimestamp(Date timestamp) \{
        this.timestamp = timestamp;
    \}

    public String getDocument() \{
        return document;
    \}

    public void setDocument(String document) \{
        this.document = document;
    \}

    public String getAction() \{
        return action;
    \}

    public void setAction(String action) \{
        this.action = action;
    \}
\}
`}
</CodeBlock>
</TabItem>

| Return Value | | |
| ------------- | ----- | ---- |
| **Name** | String | Index name |
| **Errors** | IndexingError\[\] | List of indexing errors |

## Example I

<TabItem value="errors_4" label="errors_4">
<CodeBlock language="java">
{`// gets errors for all indexes
IndexErrors[] indexErrors
    = store.maintenance().send(new GetIndexErrorsOperation());
`}
</CodeBlock>
</TabItem>

## Example II

<TabItem value="errors_5" label="errors_5">
<CodeBlock language="java">
{`// gets errors only for 'Orders/Totals' index
IndexErrors[] indexErrors
    = store.maintenance()
        .send(new GetIndexErrorsOperation(new String[]\{"Orders/Totals"\}));
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* Use `GetIndexErrorsOperation` to get errors encountered during indexing.

* The index errors will be retrieved only from the server node defined by the current [client-configuration](../../../../client-api/configuration/load-balance/overview.mdx#client-logic-for-choosing-a-node).

* To clear index errors see [delete index errors](../../../../client-api/operations/maintenance/indexes/delete-index-errors.mdx).

* In this page:
    * [Get errors for all indexes](../../../../client-api/operations/maintenance/indexes/get-index-errors.mdx#get-errors-for-all-indexes)
    * [Get errors for specific indexes](../../../../client-api/operations/maintenance/indexes/get-index-errors.mdx#get-errors-for-specific-indexes)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/get-index-errors.mdx#syntax)

</Admonition>
## Get errors for all indexes

<TabItem value="get_errors_all" label="get_errors_all">
<CodeBlock language="js">
{`// Define the get index errors operation
const getIndexErrorsOp = new GetIndexErrorsOperation();

// Execute the operation by passing it to maintenance.send
const indexErrors = await store.maintenance.send(getIndexErrorsOp);

// indexErrors will contain errors for ALL indexes
`}
</CodeBlock>
</TabItem>



## Get errors for specific indexes

<TabItem value="get_errors_specific" label="get_errors_specific">
<CodeBlock language="js">
{`// Define the get index errors operation for specific indexes
const getIndexErrorsOp = new GetIndexErrorsOperation(["Orders/Totals"]);

// Execute the operation by passing it to maintenance.send
// An exception will be thrown if any of the specified indexes do not exist
const indexErrors = await store.maintenance.send(getIndexErrorsOp);

// indexErrors will contain errors only for index "Orders/Totals"
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="syntax_1" label="syntax_1">
<CodeBlock language="js">
{`// Available overloads:
const getIndexErrorsOp = new GetIndexErrorsOperation();           // Get errors for all indexes 
const getIndexErrorsOp = new GetIndexErrorsOperation(indexNames); // Get errors for specific indexes
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - | - | - |
| __indexNames__ | string[] | List of index names for which to get errors |

| Return value of `store.maintenance.send(getIndexErrorsOp)`| |
| - | - |
| __object[]__ |  List of 'index errors' objects - see definition below.<br/>An exception is thrown if any of the specified indexes do not exist. |

<Admonition type="note" title="Note">
<TabItem value="syntax_2" label="syntax_2">
<CodeBlock language="js">
{`// An 'index errors' object:
\{
    name,  // Index name
    errors // List of 'error objects' for this index
\}
`}
</CodeBlock>
</TabItem>
<TabItem value="syntax_3" label="syntax_3">
<CodeBlock language="js">
{`// An 'error object':
\{
    // The error message
    error,
        
    // Time of error
    timestamp,

    // If Action is 'Map'    - field will contain the document ID
    // If Action is 'Reduce' - field will contain the Reduce key value
    // For all other Actions - field will be null    
    document,

    // Area where error has occurred, e.g. Map/Reduce/Analyzer/Memory/etc.
    action
\}
`}
</CodeBlock>
</TabItem>
</Admonition>




</LanguageContent>

<!---
### Indexes
- [What are Indexes](../../../../indexes/what-are-indexes)
- [Creating and Deploying Indexes](../../../../indexes/creating-and-deploying)
- [Debugging Index Errors](../../../../indexes/troubleshooting/debugging-index-errors)
- [Index Administration](../../../../indexes/index-administration)

### Operations
- [How to Reset Index](../../../../client-api/operations/maintenance/indexes/reset-index)
- [Delete index errors](../../../../client-api/operations/maintenance/indexes/delete-index-errors)


-->